# whisper.axera

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_EN.md  build.sh  resample_wav.sh  whisper.cpp
cmake/: msp_dependencies.cmake
cpp/: CMakeLists.txt  build.sh  build_ax630c.sh  build_ax650.sh  download_bsp.sh  whisper.cpp  whisper_cli.cpp  whisper_srv.cpp
cpp/cmake/: msp_dependencies.cmake
cpp/opencc/lib/cmake/opencc/: OpenCCConfigVersion.cmake  OpenCCTargets-release.cmake  OpenCCTargets.cmake
cpp/opencc/lib/pkgconfig/: opencc.pc
cpp/src/: DecoderLoop.hpp  DecoderMain.hpp  Encoder.hpp  EngineWrapper.cpp  EngineWrapper.hpp  Whisper.cpp  Whisper.hpp  WhisperHTTPServer.hpp  httplib.h
cpp/src/api/: ax_whisper_api.cpp  ax_whisper_api.h
cpp/src/ax_model_runner/: ax_model_runner.cpp  ax_model_runner.hpp
cpp/src/utilities/: file.hpp  file_mapper.hpp  log.hpp  scalar_guard.hpp  timer.hpp  vector_guard.hpp
cpp/src/utils/: checker.h  io.hpp  logger.h  memory_utils.cpp  memory_utils.hpp  timer.hpp
cpp/src/utils/nlohmann/: json_fwd.hpp
doc/: convert.md
model_convert/: README.md  README_EN.md  config_whisper_decoder_loop_u16.json  config_whisper_decoder_main_u16.json  config_whisper_decoder_u16.json  config_whisper_encoder_u16.json  convert_hf_to_openai.py  download_dataset.sh  export_malaysian.py  export_onnx.py  export_onnx_ax_loop.py  generate_data.py  requirements.txt  test_ax_loop.py  test_malaysian.py
models/models-ax650/turbo/: download.sh
opencc/lib/cmake/opencc/: OpenCCConfig.cmake
python/: languages.py  main.py  request.sh  requirements.txt  test_wer.py  whisper.py  whisper_cli.py  whisper_onnx.py  whisper_svr.py
python/axengine/: __init__.py  _handle.py  version.py
src/: DecoderLoop.hpp  DecoderMain.hpp  Encoder.hpp  base64.cpp  base64.h
src/librosa/: librosa.h
src/utils/: checker.h  io.hpp
toolchains/: aarch64-none-linux-gnu.toolchain.cmake
whisper/: config_whisper_decoder_main_u16.json  config_whisper_encoder_u16.json  download_dataset.sh  export_onnx_ax_loop.py
